@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.xbmc-hockey-streams-gotham" name="XBMC Hockey Streams" version="3.0.4" provider-name="Craig McNicholas, Swedemon">
+<addon id="plugin.video.xbmc-hockey-streams-gotham" name="XBMC Hockey Streams" version="3.0.6" provider-name="Craig McNicholas, Swedemon">
 	<requires>
 		<import addon="xbmc.python" version="2.1.0" />
 	</requires>
