@@ -1,3 +1,10 @@
+[b]3.0.6[/b]
+- Changed: Moved Live Streams to the front page (one less click!)
+
+[b]3.0.5[/b]
+- Added: Live setting added to customize live screen (previously live alternate)
+- Changed: Settings names updated
+
 [b]3.0.4[/b]
 - Changed: Asterisk is added back upon request
 
